--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>thlorenz.com</title>
-        <meta http-equiv="content-type" content="text/html" />
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+  {{> head }}
+</head>
+
+<body>
+  {{> body }}
+</body>
+
+{{> scripts }}
 </html>
