--- a/templates/partials/body.hbs
+++ b/templates/partials/body.hbs
@@ -1,8 +1,20 @@
 <body>
   <header>
-
-    <div class="avatar"></div>
-    <h1>Welcome to thlorenz.com</h1>
-     
+    <div>
+      <img src="/images/avatar.jpeg" class="avatar"/>
+      <h1>Thorsten Lorenz</h1>
+    </div>
   </header>
+  <nav>
+    <ul>
+      <li><a>Github</a></li>
+      <li><a>Blog</a></li>
+      <li><a>Stack Overflow</a></li>
+      <li><a>Contact</a></li>
+    </ul>
+  </nav>
+
+  <article>
+    
+  </article>
 </body>
