--- a/templates/partials/body.hbs
+++ b/templates/partials/body.hbs
@@ -1,20 +1,27 @@
 <body>
   <header>
-    <div>
-      <img src="/images/avatar.jpeg" class="avatar"/>
-      <h1>Thorsten Lorenz</h1>
-    </div>
+    <nav>
+      <ul>
+        <li><a>Github</a></li>
+        <li><a>Blog</a></li>
+        <li><a>Stack Overflow</a></li>
+        <li><a>Contact</a></li>
+      </ul>
+    </nav>
+
+    <img src="/images/avatar.jpeg" class="avatar"/>
+    <h1>Thorsten Lorenz</h1>
   </header>
-  <nav>
-    <ul>
-      <li><a>Github</a></li>
-      <li><a>Blog</a></li>
-      <li><a>Stack Overflow</a></li>
-      <li><a>Contact</a></li>
-    </ul>
-  </nav>
 
   <article>
-    
+    <nav>
+      <a>Links here</a>
+    </nav>
+    <section>
+      <title>Gitub Readme</title>
+      <p>Content</p>
+    </section>
   </article>
+
+  
 </body>
