initial working setup with requirejs

--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -4,3 +4,5 @@
 {{#each styles}}
     <link rel="stylesheet" href="{{ this }}" type="text/css" media="screen" charset="utf-8"0>
 {{/each}}
+
+<script data-main="js/main" src="js/lib/require.js"></script>
