--- a/templates/partials/body.hbs
+++ b/templates/partials/body.hbs
@@ -2,10 +2,10 @@
   <header>
     <nav>
       <ul>
-        <li><a>Github</a></li>
-        <li><a>Blog</a></li>
-        <li><a>Stack Overflow</a></li>
-        <li><a>Contact</a></li>
+        <li><a href="#/github">Github</a></li>
+        <li><a href="#/blog">Blog</a></li>
+        <li><a href="#/stack-overflow">Stack Overflow</a></li>
+        <li><a href="#/contact">Contact</a></li>
       </ul>
     </nav>
 
