templates for blog, stackoverflow and contact indexes

--- a/templates/partials/body.hbs
+++ b/templates/partials/body.hbs
@@ -4,7 +4,7 @@
       <ul>
         <li><a href="#/github">Github</a></li>
         <li><a href="#/blog">Blog</a></li>
-        <li><a href="#/stack-overflow">Stack Overflow</a></li>
+        <li><a href="#/stackoverflow">Stack Overflow</a></li>
         <li><a href="#/contact">Contact</a></li>
       </ul>
     </nav>
