--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -1,4 +1,5 @@
 @import nib
+@import github-nav
 
 global-reset()
 
@@ -11,68 +12,89 @@ widget-border(radius = 5px, padding = 10px, margin = 5px)
 engrave-text()
   text-shadow: rgba(253, 204, 197, 0.4) 1px 1px 0px
 
-sidebar-width       =  150px
+sidebar-width       =  250px
 sidebar-margin-left =  10px
-sidebar-left        =  sidebar-margin-left + sidebar-width + 12px
+sidebar-right        =  sidebar-margin-left + sidebar-width + 12px
+
+header-height = 110px
 
 main-height = 500px
 
-
-h1 
+h1 h2 h3 h4 
+  font-weight :  bold
+h1
   font-size   :  30px
+h2
+  font-size   :  26px
+h3
+  font-size   :  24px
+h3
+  font-size   :  22px
 
 a 
   color:  #040449
-  cursor     :  pointer
+  cursor:  pointer
+  text-decoration: none
+  engrave-text()
 
+  &:hover
+    text-decoration: inherit
+    
 body
   width: 100%
   image: '/images/noise.png'
   background-color: rgba(150, 144, 100, 0.9);
 
 header
-  widget-border(5px    5px    0px    0px,
+  widget-border(0px    5px    0px    0px,
                 10px   10px   10px   0px,
-                10px   10px   0px    10px)
+                10px   10px   0px    sidebar-right)
   engrave-text()
   color: #350808
-  height:  110px
+  height:  header-height
   float: top
 
-  nav
-    width      :  sidebar-width
-    text-align :  center
-    float: left
+nav
+  width      :  sidebar-width
+  text-align :  center
+  float: left
 
-    ul
-      li
-        margin     :  8px
-        font-size  :  16px
-        transition :  font-size 100ms 0ms ease-in
+  ul
+    li
+      margin     :  8px
+      font-size  :  16px
+      transition :  font-size 100ms 0ms ease-in
 
-        &:hover
-          transition: font-size 100ms 0ms ease-in
-          font-size: 18px
+      &:hover
+        transition: font-size 100ms 0ms ease-in
+        font-size: 18px
         
   h1
     padding: 10px
     line-height: 30px
     text-align: center
-  
-article
-  widget-border(0px    0px    5px    5px,
-                10px   10px   10px   0px,
-                2px    10px   10px   10px)
-  engrave-text()
-  float: top
-  min-height: main-height 
 
-  nav
-    float: left
+body > nav
+  widget-border(5px    0px    0px    0px,
+                10px   10px   0px   0px,
+                0px    10px   0px  10px)
+  height: header-height + 10px
+
+article > nav
+  widget-border(0px    0px    0px    5px,
+                10px   10px   0px   0px,
+                0px    10px   10px  10px)
+
+article
+  engrave-text()
 
   section 
+    widget-border(0px    0px    5px    0px,
+                  10px   10px   10px   0px,
+                  2px    10px   10px   sidebar-right)
     padding: 10px
-    float: left
+    float: top
+    min-height: main-height 
 
 .avatar
   padding: 2px
