first pass at styling github index

--- a/stylus/github-nav.styl
+++ b/stylus/github-nav.styl
@@ -1,3 +1,30 @@
-div.github-nav
-  text-overflow: none
+
+li.github-nav
+  border-radius :  5px
+  background    :  linear-gradient(top, #A5D2E7, #76889E);
+  box-shadow    :  0 0 5px #76889E
+  text-align    :  left
+  margin-right  :  0px
+  padding       :  5px 0px 5px 10px
+  engrave-text()
+  &:hover
+    background    :  linear-gradient(top, #95C2D7, #66788E);
+    box-shadow    :  0 0 8px #76889E
+
+
+  h3
+    border-bottom: #76889E solid 1px
+    padding-bottom: 5px
+    margin-right: 10px
+  p 
+    padding-top: 5px
+    padding-bottom: 5px
+  .watchers
+    position     :  relative
+    float: right
+    margin-right :  10px
+    top          :  -27px
+
+
+  
   
