--- a/templates/partials/github-nav.hbs
+++ b/templates/partials/github-nav.hbs
@@ -1,7 +1,7 @@
 <li class="github-nav">
   <a href="/github/content?url={{htmlUrl}}">
-    <h2>{{ name }} </h2>
-    <span class="watchers">{{ watchers }}</span>
-    <span>{{ description  }}</span>
+    <h3>{{ name }} </h3>
+    <p class="watchers">{{ watchers }}</p>
+    <p>{{ description  }}</p>
   </a>
 </li>
