added star to github navs

--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -100,3 +100,9 @@ article
   border: 1px solid #DDD
   border-radius: 3px
   float: right
+
+.icon.star
+  background-image: url("/images/star.png");
+  background-position-y: 3px
+  background-repeat: no-repeat
+  padding-left: 20px
