github readme working and first pass at styling it

--- a/stylus/github-nav.styl
+++ b/stylus/github-nav.styl
@@ -19,11 +19,12 @@ li.github-nav
   p 
     padding-top: 5px
     padding-bottom: 5px
+    padding-right: 5px
+    font-size: 14px
   .watchers
     position     :  relative
     float: right
     margin-right :  10px
-    top          :  -27px
 
 
   
