--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -1,5 +1,7 @@
 @import nib
 @import github-nav
+@import markdown-body
+@import markdown-highlight
 
 global-reset()
 
@@ -103,6 +105,5 @@ article
 
 .icon.star
   background-image: url("/images/star.png");
-  background-position-y: 3px
   background-repeat: no-repeat
   padding-left: 20px
