--- a/stylus/markdown-body.styl
+++ b/stylus/markdown-body.styl
@@ -1,4 +1,9 @@
 .markdown-body
+  // thlorenz.com
+  background: #B2B9B9
+  border-radius(15px)
+  padding: 20px
+  // end
   font-family: Helvetica, arial, freesans, clean, sans-serif
   font-size: 14px
   line-height: 1.6
@@ -239,7 +244,7 @@
   padding: 0px 5px
   white-space: nowrap
   border: 1px solid #eaeaea
-  background-color: #f8f8f8
+  background-color: #CEC8C8  
   border-radius: 3px
 
 .markdown-body pre>code
@@ -250,13 +255,20 @@
   background: transparent
 
 .markdown-body .highlight pre,.markdown-body pre
-  background-color: #f8f8f8
-  border: 1px solid #ccc
+  // background-color: #f8f8f8
+  // border: 1px solid #ccc
+  // border-radius: 3px
+
+  // thlorenz.com
+  background-color: #E5F3F2
+  border-radius(5px)
+  border: 1px solid rgba(9, 8, 8, 0.45)
+  // end
+
   font-size: 13px
   line-height: 19px
   overflow: auto
   padding: 6px 10px
-  border-radius: 3px
 
 .markdown-body pre code,.markdown-body pre tt
   background-color: transparent
