--- a/templates/partials/github-nav.hbs
+++ b/templates/partials/github-nav.hbs
@@ -1,7 +1,7 @@
 <li class="github-nav">
-  <a href="/github/content?url={{htmlUrl}}">
-    <h3>{{ name }} </h3>
-    <p class="watchers icon star">{{ watchers }}</p>
-    <p>{{ description  }}</p>
-  </a>
+  <a href="/#/github/repo/{{ name }}">
+  <p class="watchers icon star">{{ watchers }}</p>
+  <h3>{{ name }} </h3>
+  <p>{{ description  }}</p>
+</a>
 </li>
