styling improvements mostly blog related

--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -2,6 +2,7 @@
 @import github-nav
 @import markdown-body
 @import markdown-highlight
+@import blog
 
 global-reset()
 
@@ -21,7 +22,7 @@ sidebar-right        =  sidebar-margin-left + sidebar-width + 11px
 header-height = 90px
 main-height = 500px
 
-h1 h2 h3 h4 
+h1 h2 h3 h4
   font-weight :  bold
 h1
   font-size   :  30px
@@ -31,6 +32,9 @@ h3
   font-size   :  24px
 h3
   font-size   :  18px
+
+em 
+  font-style: italic
 
 a 
   color:  #040449
@@ -107,3 +111,4 @@ article
   background-image: url("/images/star.png");
   background-repeat: no-repeat
   padding-left: 20px
+
