--- a/stylus/markdown-body.styl
+++ b/stylus/markdown-body.styl
@@ -35,6 +35,11 @@
   cursor: text
   position: relative
 
+  // thlorenz.com
+  text-shadow: 2px 2px 5px #999;  
+  font-family: monospace
+  //end 
+
 .markdown-body h1 .mini-icon-link,.markdown-body h2 .mini-icon-link,.markdown-body h3 .mini-icon-link,.markdown-body h4 .mini-icon-link,.markdown-body h5 .mini-icon-link,.markdown-body h6 .mini-icon-link
   display: none
   color: #000
