more similar github and blog style

--- a/stylus/blog.styl
+++ b/stylus/blog.styl
@@ -15,11 +15,7 @@
 .blog-post .created
   margin-right: 10px
   margin-top: 5px
-  text-shadow: 2px 2px 5px #999;  
-
-.blog-post h1, h2, h3, h4
-  text-shadow: 2px 2px 5px #999;  
-  font-family: monospace
+  font-weight: normal
 
 .blog-post h2 
   margin-top: 20px
@@ -28,3 +24,8 @@
 .blog-post .syntaxhighlighter
   margin: 20px
   width: 935px
+  background-color: #E5F3F2 !important
+  border-radius(5px)
+  border: 1px solid rgba(9, 8, 8, 0.45)
+  font-size: 14px
+  line-height: 20px
