--- a/stylus/markdown-body.styl
+++ b/stylus/markdown-body.styl
@@ -1,6 +1,6 @@
 .markdown-body
   // thlorenz.com
-  background: #B2B9B9
+  background: white
   border-radius(15px)
   padding: 20px
   // end
@@ -34,11 +34,6 @@
   -webkit-font-smoothing: antialiased
   cursor: text
   position: relative
-
-  // thlorenz.com
-  text-shadow: 2px 2px 5px #999;  
-  font-family: monospace
-  //end 
 
 .markdown-body h1 .mini-icon-link,.markdown-body h2 .mini-icon-link,.markdown-body h3 .mini-icon-link,.markdown-body h4 .mini-icon-link,.markdown-body h5 .mini-icon-link,.markdown-body h6 .mini-icon-link
   display: none
@@ -248,9 +243,12 @@
   margin: 0 2px
   padding: 0px 5px
   white-space: nowrap
-  border: 1px solid #eaeaea
-  background-color: #CEC8C8  
+  // thlorenz.com
+  background-color: #E5F3F2
+  border-radius(3px)
+  border: 1px solid rgba(9, 8, 8, 0.45)
   border-radius: 3px
+  // end
 
 .markdown-body pre>code
   margin: 0
@@ -260,9 +258,6 @@
   background: transparent
 
 .markdown-body .highlight pre,.markdown-body pre
-  // background-color: #f8f8f8
-  // border: 1px solid #ccc
-  // border-radius: 3px
 
   // thlorenz.com
   background-color: #E5F3F2
@@ -270,7 +265,7 @@
   border: 1px solid rgba(9, 8, 8, 0.45)
   // end
 
-  font-size: 13px
+  font-size: 14px
   line-height: 19px
   overflow: auto
   padding: 6px 10px
