--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -25,8 +25,10 @@ main-height = 500px
 
 h1 h2 h3 h4
   font-weight :  bold
+  font-family: monospace
 h1
   font-size   :  30px
+  text-shadow: 2px 2px 5px #999;  
 h2
   font-size   :  26px
 h3
