removed stackoverflow and changed contact to about

--- a/templates/partials/body.hbs
+++ b/templates/partials/body.hbs
@@ -1,10 +1,9 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#/github">Github</a></li>
       <li><a href="#/blog">Blog</a></li>
-      <li><a href="#/stackoverflow">Stack Overflow</a></li>
-      <li><a href="#/contact">Contact</a></li>
+      <li><a href="#/github">Github</a></li>
+      <li><a href="#/about">About</a></li>
     </ul>
   </nav>
 
