fixed blog code width

--- a/stylus/blog.styl
+++ b/stylus/blog.styl
@@ -22,8 +22,9 @@
   margin-bottom: 10px
 
 .blog-post .syntaxhighlighter
-  margin: 20px
-  width: 935px
+  margin: 20px 5px 20px 5px
+  width: inherit
+  overflow: auto
   background-color: #E5F3F2 !important
   border-radius(5px)
   border: 1px solid rgba(9, 8, 8, 0.45)
