--- a/stylus/blog-nav.styl
+++ b/stylus/blog-nav.styl
@@ -3,13 +3,12 @@ li.blog-nav
   background    :  linear-gradient(top, #A5D2E7, #76889E);
   box-shadow    :  0 0 5px #76889E
   text-align    :  left
-  margin-right  :  0px
-  padding       :  5px 0px 5px 10px
+  margin        :  5px 2px 5px 2px
+  padding       :  5px
   engrave-text()
   &:hover
     background    :  linear-gradient(top, #95C2D7, #66788E);
     box-shadow    :  0 0 8px #76889E
-
 
   h3
     padding-bottom: 5px
