--- a/stylus/markdown-body.styl
+++ b/stylus/markdown-body.styl
@@ -3,6 +3,7 @@
   background: white
   border-radius(15px)
   padding: 20px
+  margin-left: 5px
   // end
   font-family: Helvetica, arial, freesans, clean, sans-serif
   font-size: 14px
