--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -17,11 +17,10 @@ engrave-text()
   text-shadow: rgba(253, 204, 197, 0.4) 1px 1px 0px
 
 sidebar-width       =  250px
-sidebar-margin-left =  10px
-sidebar-right        =  sidebar-margin-left + sidebar-width + 11px
+sidebar-margin-left =  5px
+sidebar-right        =  sidebar-margin-left + sidebar-width + 2px
 
-header-height = 90px
-main-height = 500px
+header-height = 130px
 
 h1 h2 h3 h4
   font-weight :  bold
@@ -38,7 +37,6 @@ h3
 
 em 
   font-style: italic
-
 a 
   color:  #040449
   cursor:  pointer
@@ -47,68 +45,73 @@ a
 
   &:hover
     text-decoration: inherit
+
+html
+  height: 100%
     
 body
   width: 100%
+  height: 100%
+  margin: 0
+  padding: 0
   image: '/images/noise.png'
   background-color: rgba(198, 223, 247, 0.9)
-header
-  widget-border(0px    5px    0px    0px,
-                10px   10px   10px   0px,
-                10px   10px   0px    sidebar-right)
+
+.sidebar
+  float: left
   engrave-text()
   color: #222429
+  width: sidebar-width
+  min-height: 100%
+  margin-bottom: auto
+  margin-left: 5px
+
+header
   height:  header-height
-  float: top
-
-nav
-  width      :  sidebar-width
-  text-align :  center
-  float: left
-
-  ul
-    li
-      margin     :  8px
-      font-size  :  16px
-      transition :  font-size 100ms 0ms ease-in
+  widget-border(5px    0px    0px    0px,
+                10px   10px   10px   0px,
+                0px    0px   0px     0px)
 
   h1
-    padding: 10px
+    margin: 0px 0px 10px 20px
+    
     line-height: 30px
-    text-align: center
+  img
+    float: left
+    border: 1px solid #DDD
+    border-radius: 3px
+    margin-left: 20px
+  nav
+    text-align :  center
+    height: header-height + 20px
 
-body > nav
-  widget-border(5px    0px    0px    0px,
-                0px   10px   0px   0px,
-                0px    10px   0px  10px)
-  height: header-height + 20px
+    ul
+      margin-top: 18px
+      li
+        margin     :  8px
+        font-size  :  16px
 
-  ul li:hover
-        transition: font-size 100ms 0ms ease-in
-        font-size: 18px
-        
+        &:hover
+          transition: font-size 100ms 0ms ease-in
+          font-size: 18px
 
-article > nav
+.sidebar > nav
   widget-border(0px    0px    0px    5px,
-                10px   10px   0px   0px,
-                0px    10px   10px  10px)
+                5px    5px    5px    5px,
+                2px    0px   0px     0px)
+  ul
+    li
+      margin:  5px 0px 5px 0px
 
 article
   engrave-text()
-
+  min-height: 100%
+  widget-border(0px    5px    5px    0px,
+                0px   0px   0px   0px,
+                2px    10px   10px  sidebar-right)
   section 
-    widget-border(0px    0px    5px    0px,
-                  10px   10px   10px   0px,
-                  2px    10px   10px   sidebar-right)
     padding: 10px
     float: top
-    min-height: main-height 
-
-.avatar
-  padding: 2px
-  border: 1px solid #DDD
-  border-radius: 3px
-  float: right
 
 .icon.star
   background-image: url("/images/star.png");
