--- a/templates/partials/body.hbs
+++ b/templates/partials/body.hbs
@@ -1,21 +1,23 @@
 <body>
-  <nav>
-    <ul>
-      <li><a href="#/blog">Blog</a></li>
-      <li><a href="#/github">Github</a></li>
-      <li><a href="#/about">About</a></li>
-    </ul>
-  </nav>
 
-  <header>
-    <img src="/images/avatar.jpeg" class="avatar"/>
-    <h1>Thorsten Lorenz</h1>
-  </header>
-
-  <article>
+  <div class="sidebar">
+    <header>
+      <h1>Thorsten Lorenz</h1>
+      <img src="/images/avatar.jpeg" class="avatar"/>
+      <nav>
+        <ul>
+          <li><a href="#/blog">Blog</a></li>
+          <li><a href="#/github">Github</a></li>
+          <li><a href="#/about">About</a></li>
+        </ul>
+      </nav>
+    </header>
     <nav>
       <ul></ul>
     </nav>
+  </div>
+
+  <article>
     <section>
     </section>
   </article>
