improved styling: - moved most blog related styles directly into blog.css to reuse for default dog style

--- a/stylus/blog.styl
+++ b/stylus/blog.styl
@@ -1,32 +1,2 @@
-.blog-post
-  background: white
-  padding: 10px
-  margin: 5px
-  border-radius: 5px
-  font-size: 16px
-  line-height: 26px
-  font-family: Arial, Tahoma, Helvetica, FreeSans, sans-serif
-
-
-.blog-post ul
-  margin-top: 15px
-  margin-bottom: 10px
-
-.blog-post .created
-  margin-right: 10px
-  margin-top: 5px
-  font-weight: normal
-
-.blog-post h2 
-  margin-top: 20px
-  margin-bottom: 10px
-
-.blog-post .syntaxhighlighter
-  margin: 20px 5px 20px 5px
-  width: inherit
-  overflow: auto
-  background-color: #E5F3F2 !important
-  border-radius(5px)
-  border: 1px solid rgba(9, 8, 8, 0.45)
-  font-size: 14px
-  line-height: 20px
+.blog-post h1
+  text-shadow: 2px 2px 5px #999
