--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -25,9 +25,12 @@ header-height = 130px
 h1 h2 h3 h4
   font-weight :  bold
   font-family: monospace
-h1
+
+h1 
   font-size   :  30px
+h1:first
   text-shadow: 2px 2px 5px #999;  
+
 h2
   font-size   :  26px
 h3
