--- a/stylus/markdown-body.styl
+++ b/stylus/markdown-body.styl
@@ -47,6 +47,9 @@
   margin-left: -22px
   top: 15%
 
+.markdown-body > :first-child
+  text-shadow: 2px 2px 5px #999;  
+
 .markdown-body h1:hover a.anchor .mini-icon-link,.markdown-body h2:hover a.anchor .mini-icon-link,.markdown-body h3:hover a.anchor .mini-icon-link,.markdown-body h4:hover a.anchor .mini-icon-link,.markdown-body h5:hover a.anchor .mini-icon-link,.markdown-body h6:hover a.anchor .mini-icon-link
   display: inline-block
 
