minor style fix and getting ready to deploy:

--- a/stylus/markdown-body.styl
+++ b/stylus/markdown-body.styl
@@ -47,7 +47,7 @@
   margin-left: -22px
   top: 15%
 
-.markdown-body > :first-child
+.markdown-body h1:first-of-type
   text-shadow: 2px 2px 5px #999;  
 
 .markdown-body h1:hover a.anchor .mini-icon-link,.markdown-body h2:hover a.anchor .mini-icon-link,.markdown-body h3:hover a.anchor .mini-icon-link,.markdown-body h4:hover a.anchor .mini-icon-link,.markdown-body h5:hover a.anchor .mini-icon-link,.markdown-body h6:hover a.anchor .mini-icon-link
