--- a/stylus/markdown-body.styl
+++ b/stylus/markdown-body.styl
@@ -267,6 +267,7 @@
   background-color: #E5F3F2
   border-radius(5px)
   border: 1px solid rgba(9, 8, 8, 0.45)
+  font-family: monospace
   // end
 
   font-size: 14px
