--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -13,14 +13,20 @@ widget-border(radius = 5px, padding = 10px, margin = 5px)
   padding: padding
   margin: margin
 
+panel(border-radius = 5px) 
+  position: absolute
+  background-color: rgba(2, 2, 2, 0.3);
+  border-radius: border-radius 
+  padding: 10px
+
 engrave-text()
   text-shadow: rgba(253, 204, 197, 0.4) 1px 1px 0px
 
-sidebar-width       =  250px
-sidebar-margin-left =  5px
-sidebar-right        =  sidebar-margin-left + sidebar-width + 2px
-
-header-height = 130px
+left-column-width  =  250px
+right-column-width =  900px
+header-height      =  130px
+gutter             =  10px
+panel-margin       =  23px
 
 h1 h2 h3 h4
   font-weight :  bold
@@ -70,20 +76,12 @@ body
   image: '/images/noise.png'
   background-color: rgba(198, 223, 247, 0.9)
 
-.sidebar
-  float: left
-  engrave-text()
-  color: #222429
-  width: sidebar-width
-  min-height: 100%
-  margin-bottom: auto
-  margin-left: 5px
-
 header
+  panel(5px 0px 0px 0px)
+  left: gutter
+  top: gutter
+  width: left-column-width
   height:  header-height
-  widget-border(5px    0px    0px    0px,
-                10px   10px   10px   0px,
-                0px    0px   0px     0px)
 
   h1
     margin: 0px 0px 10px 20px
@@ -108,21 +106,32 @@ header
           transition: font-size 100ms 0ms ease-in
           font-size: 18px
 
-.sidebar > nav
-  widget-border(0px    0px    0px    5px,
-                5px    5px    5px    5px,
-                2px    0px   0px     0px)
+body > nav
+  panel(0px 0px 0px 5px)
+  left: gutter
+  top: gutter + header-height + panel-margin
+  bottom: gutter
+  width: left-column-width
+  overflow-y: auto
+
+  engrave-text()
+  color: #222429
+
   ul
     li
       margin:  5px 0px 5px 0px
 
-article
+body > section
+  panel(0px 5px 5px 0px)
+  left: gutter + left-column-width + panel-margin
+  top: gutter 
+  bottom: gutter
+  width: right-column-width
+  overflow-y: auto
+
   engrave-text()
-  min-height: 100%
-  widget-border(0px    5px    5px    0px,
-                0px   0px   0px   0px,
-                2px    10px   10px  sidebar-right)
-  section 
+
+  article 
     padding: 10px
     float: top
 
