--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -59,7 +59,13 @@ nav a
   &:hover
     text-decoration: inherit
 
-ul li
+ul 
+  list-style-type: circle
+
+ol
+  list-style-type: decimal
+  
+dl li
   list-style: initial
 
 nav ul li
