--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -1,5 +1,6 @@
 <title>thlorenz.com</title>
 <meta http-equiv="content-type" content="text/html" />
+<meta charset="UTF-8">
 
 {{#each styles}}
     <link rel="stylesheet" href="{{ this }}" type="text/css" media="screen" charset="utf-8"0>
