fixed tag style

--- a/stylus/blog.styl
+++ b/stylus/blog.styl
@@ -3,3 +3,6 @@
 
 .blog-post ul, .blog-post ol, .blog-post dl
   margin-left: 35px !important
+
+.blog-post ul.tags, .blog-post ol.tags, .blog-post dl.tags
+  margin-left: 5px !important
