--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -30,7 +30,7 @@ panel-margin       =  23px
 
 h1 h2 h3 h4
   font-weight :  bold
-  font-family: monospace
+  font-family :  monospace
 
 h1 
   font-size   :  30px
@@ -41,9 +41,11 @@ h2
   font-size   :  26px
 h3
   font-size   :  24px
-h3
+h4
   font-size   :  18px
 
+strong
+  font-weight: bold
 em 
   font-style: italic
 a 
