working concatenate and minfy with requirejs

--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -7,4 +7,5 @@
 {{/each}}
 
 <script data-main="js/main" src="js/lib/require.js"></script>
+<script data-main="js/main" src="js/main.built.js"></script>
 <script src="js/google-analytics.js"></script>
