--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="{{ this }}" type="text/css" media="screen" charset="utf-8"0>
 {{/each}}
 
-<script data-main="js/main" src="js/lib/require.js"></script>
-<script data-main="js/main" src="js/main.built.js"></script>
+<!-- <script data-main="js/main" src="js/lib/require.js"></script> -->
+
+<script data-main="js/main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.0.6/require.min.js"></script>
+<script src="js/main.built.js"></script>
 <script src="js/google-analytics.js"></script>
