--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -8,6 +8,6 @@
 
 <!-- <script data-main="js/main" src="js/lib/require.js"></script> -->
 
-<script data-main="js/main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.0.6/require.min.js"></script>
+<script data-main="js/main.build" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.0.6/require.min.js"></script>
 <script src="js/main.built.js"></script>
 <script src="js/google-analytics.js"></script>
