inlinded googleanalytics and ignored built.js

--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -10,4 +10,14 @@
 
 <script data-main="js/main.build" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.0.6/require.min.js"></script>
 <script src="js/main.built.js"></script>
-<script src="js/google-analytics.js"></script>
+<script type="text/javascript" charset="utf-8">
+    var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-32151587-3']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
