--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -8,7 +8,7 @@
 
 <!-- <script data-main="js/main" src="js/lib/require.js"></script> -->
 
-<script data-main="js/main.build" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.0.6/require.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.0.6/require.min.js"></script>
 <script src="js/main.built.js"></script>
 <script type="text/javascript" charset="utf-8">
     var _gaq = _gaq || [];
