--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="{{ this }}" type="text/css" media="screen" charset="utf-8"0>
 {{/each}}
 
-<!-- <script data-main="js/main" src="js/lib/require.js"></script> -->
+{{#each scripts}}
+  <script {{#if this.dataMain}} data-main="{{ this.dataMain }}" {{/if}} src="{{ this.path }}"></script>
+{{/each}}
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.0.6/require.min.js"></script>
-<script src="js/main.built.js"></script>
 <script type="text/javascript" charset="utf-8">
     var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-32151587-3']);
