--- a/templates/partials/body.hbs
+++ b/templates/partials/body.hbs
@@ -1,21 +1,23 @@
 <body>
 
-  <header>
-    <h1>Thorsten Lorenz</h1>
-    <img src="/images/avatar.jpeg" class="avatar"/>
+  <div class="wrapper">
+    <header>
+      <h1>Thorsten Lorenz</h1>
+      <img src="/images/avatar.jpeg" class="avatar"/>
+      <nav>
+        <ul>
+          <li><a href="#/blog">Blog</a></li>
+          <li><a href="#/github">Github</a></li>
+          <li><a href="#/about">About</a></li>
+        </ul>
+      </nav>
+    </header>
     <nav>
-      <ul>
-        <li><a href="#/blog">Blog</a></li>
-        <li><a href="#/github">Github</a></li>
-        <li><a href="#/about">About</a></li>
-      </ul>
+      <ul></ul>
     </nav>
-  </header>
-  <nav>
-    <ul></ul>
-  </nav>
 
-  <section>
-  </section>
+    <section>
+    </section>
+  </div>
   
 </body>
