--- a/templates/partials/body.hbs
+++ b/templates/partials/body.hbs
@@ -6,9 +6,9 @@
       <img src="/images/avatar.jpeg" class="avatar"/>
       <nav>
         <ul>
-          <li><a href="#/blog">Blog</a></li>
-          <li><a href="#/github">Github</a></li>
-          <li><a href="#/about">About</a></li>
+          <li><a href="#/blog">blog</a></li>
+          <li><a href="#/github">github</a></li>
+          <li><a href="#/about">about</a></li>
         </ul>
       </nav>
     </header>
