added geeklist button

--- a/stylus/about.styl
+++ b/stylus/about.styl
@@ -14,3 +14,11 @@
     li
       padding: 5px
       margin: 5px
+    li.geeklist
+      background     :  antiqueWhite
+      width          :  159px
+      height         :  50px
+      padding-top    :  6px
+      padding-bottom :  0px
+      margin-left    :  10px
+      border-radius(5px)
