--- a/templates/partials/about-content.hbs
+++ b/templates/partials/about-content.hbs
@@ -27,12 +27,20 @@
       </a>
     </li>
 
+    <!-- geeklist -->
+    <li class="geeklist">
+      <a href="https://geekli.st/thlorenz/">
+        <img src="https://geekli.st/images/logo.png" width="159" height="41" alt="profile for Thorsten Lorenz on geeklist"></img>
+      </a>
+    </li>
+
     <!-- stackoverflow -->
     <li>
       <a href="http://stackexchange.com/users/34461/thorsten-lorenz">
         <img src="http://stackexchange.com/users/flair/34461.png" width="208" height="58" alt="profile for Thorsten Lorenz on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Thorsten Lorenz on Stack Exchange, a network of free, community-driven Q&amp;A sites" />
       </a>
     </li>
+
   </ul>
 </section>
 </article>
