--- a/stylus/about.styl
+++ b/stylus/about.styl
@@ -1,5 +1,5 @@
-
-.about-me
+.about-me,
+.about-site
   section
     padding: 5px
     margin-left: 0px
@@ -14,6 +14,9 @@
     li
       padding: 5px
       margin: 5px
+
+.about-me,
+  section
     li.geeklist
       background     :  antiqueWhite
       width          :  159px
@@ -22,3 +25,7 @@
       padding-bottom :  0px
       margin-left    :  10px
       border-radius(5px)
+
+.about-site
+  li a
+    margin-left: 10px
