added wordpress link

--- a/templates/partials/about-me-content.hbs
+++ b/templates/partials/about-me-content.hbs
@@ -41,6 +41,13 @@
       </a>
     </li>
 
+    <!-- wordpress -->
+    <li>
+      <a href="http://thorstenlorenz.wordpress.com">
+        <img src="http://s.wordpress.org/about/images/mike/wp-2.0-button-trans.gif" alt="my old blog" title="My old wordpress blog"></img>
+      </a>
+    </li>
+
   </ul>
 </section>
 </article>
