--- a/templates/partials/about-site-content.hbs
+++ b/templates/partials/about-site-content.hbs
@@ -14,6 +14,7 @@
     <ul>
         <li>
           <p>dog</p>
+          <a href="#/github/repo/dog">documentation</a>
           <a href="http://github.com/thlorenz/dog">source on github</a>
         </li>
         <li>
