disqus now works and only shows up for blogs, however not sure if separate threads are created for each post

--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -10,6 +10,7 @@
   <script {{#if this.dataMain}} data-main="{{ this.dataMain }}" {{/if}} src="{{ this.path }}"></script>
 {{/each}}
 
+<!-- google analytics -->
 <script type="text/javascript" charset="utf-8">
     var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-32151587-3']);
