minor style fix

--- a/stylus/index.styl
+++ b/stylus/index.styl
@@ -139,12 +139,18 @@ header
   left: 0 + left-column-width + panel-margin
   top: gutter 
   width: right-column-width
+  min-height: header-height 
 
   engrave-text()
+
+  .disqus
+    display: none
 
   article 
     padding: 10px
     float: top
+  
+  
 
 .icon.star
   background-image: url("/images/star.png");
