styled about page profile icons

--- a/stylus/about.styl
+++ b/stylus/about.styl
@@ -17,6 +17,15 @@
 
 .about-me,
   section
+    li.stackoverflow
+      img
+        width: 170px
+        height: 47px
+        border-radius(5px)
+    li.linkedin
+      img
+        width: 168px
+        height: 37px
     li.geeklist
       background     :  antiqueWhite
       width          :  159px
@@ -25,6 +34,10 @@
       padding-bottom :  0px
       margin-left    :  10px
       border-radius(5px)
+    li.wordpress
+      img
+        width: 170px
+        
 
 .about-site
   li a
