--- a/templates/partials/about-me-content.hbs
+++ b/templates/partials/about-me-content.hbs
@@ -20,10 +20,17 @@
 <section>
   <h4>learn more about me</h4>
   <ul>
+    <!-- stackoverflow -->
+    <li class="stackoverflow">
+      <a href="http://stackexchange.com/users/34461/thorsten-lorenz">
+        <img src="http://stackexchange.com/users/flair/34461.png" alt="profile for Thorsten Lorenz on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Thorsten Lorenz on Stack Exchange, a network of free, community-driven Q&amp;A sites" />
+      </a>
+    </li>
+
     <!-- linked in -->
-    <li>
+    <li class="linkedin">
       <a href="http://www.linkedin.com/pub/thorsten-lorenz/49/110/8a9">
-        <img src="http://www.linkedin.com/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Thorsten Lorenz's profile on LinkedIn">
+        <img src="http://www.linkedin.com/img/webpromo/btn_myprofile_160x33.png" border="0" alt="View Thorsten Lorenz's profile on LinkedIn">
       </a>
     </li>
 
@@ -34,15 +41,8 @@
       </a>
     </li>
 
-    <!-- stackoverflow -->
-    <li>
-      <a href="http://stackexchange.com/users/34461/thorsten-lorenz">
-        <img src="http://stackexchange.com/users/flair/34461.png" width="208" height="58" alt="profile for Thorsten Lorenz on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Thorsten Lorenz on Stack Exchange, a network of free, community-driven Q&amp;A sites" />
-      </a>
-    </li>
-
     <!-- wordpress -->
-    <li>
+    <li class="wordpress">
       <a href="http://thorstenlorenz.wordpress.com">
         <img src="http://s.wordpress.org/about/images/mike/wp-2.0-button-trans.gif" alt="my old blog" title="My old wordpress blog"></img>
       </a>
