--- a/stylus/blog.styl
+++ b/stylus/blog.styl
@@ -6,6 +6,7 @@
 
 .blog-post ul.tags, .blog-post ol.tags, .blog-post dl.tags
   margin-left: 5px !important
+  margin-bottom: 20px
 
 .blog-post img
   margin: 15px
