--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset=utf-8 />
-  <title>thlorenz.com</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-responsive.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
-  <script type="text/javascript" src="public/js/build/bundle.js"></script>
+  {{> head }}
 </head>
 <body>
   <h1>thlorenz.com</h1>
