--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -1,13 +1,11 @@
- 
 <meta charset=utf-8 />
 <title>thlorenz.com</title>
 <meta http-equiv="content-type" content="text/html" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 {{#each styles}}
   <link rel="stylesheet" href="/css/{{ this }}" type="text/css" media="screen" charset="utf-8"0>
 {{/each}}
-
-<script type="text/javascript" src="/js/build/bundle.js"></script>
 
 <!-- google analytics -->
 <script type="text/javascript" charset="utf-8">
