--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,38 @@
   {{> head }}
 </head>
 <body>
-  <h1>thlorenz.com</h1>
+
+  <nav class="navbar navbar-inverse row">
+    <div class="navbar-inner">
+        <div class="span2 avatar">
+          <img src="/img/avatar.jpeg">
+        </div>
+        <h1 class="offset3">Thorsten Lorenz</h1>
+        <div class="offset4">
+          <ul class="nav main">
+            <li> <a href="#">Blog</a> </li>
+            <li> <a href="#">Github</a> </li>
+            <li> <a href="#">About</a> </li>
+          </ul>
+        </div>
+    </div>
+  </nav>
+
+  <section class="row">
+      <nav class="sidebar offset1 span3">
+        <ul class="nav">
+          <li> <a href="#">Blog1</a> </li>
+          <li> <a href="#">Blog2</a> </li>
+          <li> <a href="#">Blog3</a> </li>
+        </ul>
+      </nav>
+      <article class="span5">
+        <h2> Main content</h2>
+      </article>
+    </div>
+  </section>
+</div>
+
 </body>
 {{> scripts }}
 </html>
