extracting blog nav into partial

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,9 +24,7 @@
   <section class="row">
       <nav class="sidebar offset1 span3">
         <ul class="nav">
-          <li> <a href="#">Blog1</a> </li>
-          <li> <a href="#">Blog2</a> </li>
-          <li> <a href="#">Blog3</a> </li>
+        {{> blog_nav }}
         </ul>
       </nav>
       <article class="span5">
