creating navs for all 3 main page parts
- cloning config to allow specifying locals inside routes without affecting config
- adding clone package
- adding extra routes and nav templates

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,10 +24,13 @@
   <section class="row">
       <nav class="sidebar offset1 span3">
         <ul class="nav">
-        {{#if blog }}
+        {{#if model.blog }}
           {{> blog_nav }}
         {{/if}}
-        {{#if about }}
+        {{#if model.github }}
+          {{> github_nav }}
+        {{/if}}
+        {{#if model.about }}
           {{> about_nav }}
         {{/if}}
         </ul>
