first step towards push state
- server renders html or json depending on accept headers
- json contains pre-rendered html for sidebar and content
- client listens to anchor clicks and does json request for the resource

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,14 +21,14 @@
     </div>
   </nav>
 
-  <section class="row">
+  <section class="row main">
       <nav class="sidebar offset1 span3">
         <ul class="nav">
-          {{{ compile sidebar model.sidebar }}}
+          {{{ exec sidebar model.sidebar }}}
         </ul>
       </nav>
-      <article class="span5">
-        {{{ compile content model.content }}}
+      <article class="content span5">
+        {{{ exec content model.content }}}
       </article>
     </div>
   </section>
