--- a/views/partials/blog-nav.hbs
+++ b/views/partials/blog-nav.hbs
@@ -1,3 +1,3 @@
-<li> <a href="#">Blog1</a> </li>
-<li> <a href="#">Blog2</a> </li>
-<li> <a href="#">Blog3</a> </li>
+<li> <a href="/blog/post1">Blog1</a> </li>
+<li> <a href="/blog/post2">Blog2</a> </li>
+<li> <a href="/blog/post3">Blog3</a> </li>
