--- a/views/partials/blog-nav.hbs
+++ b/views/partials/blog-nav.hbs
@@ -1,3 +1,8 @@
-<li> <a href="/blog/post1">Blog1</a> </li>
-<li> <a href="/blog/post2">Blog2</a> </li>
-<li> <a href="/blog/post3">Blog3</a> </li>
+{{#each this}}
+<li>
+  <a href="/blog/{{ name }}">
+    <h4>{{ title }} </h4>
+    <p>{{ created  }}</p>
+  </a>
+</li>
+{{/each}}
