--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,10 +7,10 @@
 
   <nav class="navbar navbar-inverse row">
     <div class="navbar-inner">
-        <div class="span2 avatar">
+        <div class="offset2 span2 avatar">
           <img src="/img/avatar.jpeg">
         </div>
-        <h1 class="offset3">Thorsten Lorenz</h1>
+        <h1 class="offset4">Thorsten Lorenz</h1>
         <div class="offset4">
           <ul class="nav main">
             <li> <a href="/blog">Blog</a> </li>
@@ -22,7 +22,7 @@
   </nav>
 
   <section class="row main">
-      <nav class="sidebar offset1 span3">
+      <nav class="sidebar span4">
         <ul class="nav">
           {{#if model }}
           {{#if model.sidebar}}
