--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
 
   <nav class="navbar navbar-inverse row">
     <div class="navbar-inner">
-        <div class="offset2 span2 avatar">
+        <div class="span2 avatar">
           <img src="/img/avatar.jpeg">
         </div>
         <h1 class="offset4">Thorsten Lorenz</h1>
