--- a/views/partials/about-nav.hbs
+++ b/views/partials/about-nav.hbs
@@ -1,2 +1,2 @@
-<li> <a href="#">about me</a> </li>
-<li> <a href="#">about thlorenz.com</a> </li>
+<li><h4><a href="#">about me</a></h4></li>
+<li><h4><a href="#">about thlorenz.com</a></h4></li>
