--- a/views/partials/github-nav.hbs
+++ b/views/partials/github-nav.hbs
@@ -1,3 +1,3 @@
-<li> <a href="#">Repo1</a> </li>
-<li> <a href="#">Repo2</a> </li>
-<li> <a href="#">Repo3</a> </li>
+<li> <a href="#"><h4>Repo1</h4></a> </li>
+<li> <a href="#"><h4>Repo2</h4></a> </li>
+<li> <a href="#"><h4>Repo3</h4></a> </li>
