--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,9 +13,8 @@
         <h1 class="offset4">Thorsten Lorenz</h1>
         <div class="offset4">
           <ul class="nav main">
-            <li> <a href="/blog">Blog</a> </li>
-            <li> <a href="/github">Github</a> </li>
-            <li> <a href="/about">About</a> </li>
+            <li> <a href="/blog">blog</a> </li>
+            <li> <a href="/about">about</a> </li>
           </ul>
         </div>
     </div>
