improving navbar appearance

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,13 +2,19 @@ body {
   background: rgba(27, 27, 27, 0.93);
 }
 
+.navbar {
+  height: 145px;
+}
+.navbar-inner {
+  height: 140px;
+}
+.navbar h1 {
+  padding-left: 15px;
+}
+
 nav .main {
   padding-top: 20px;
   padding-left: 10px;
-}
-
-.navbar h1 {
-  padding-left: 15px;
 }
 
 section.main {
