--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
   <nav class="navbar navbar-inverse row">
     <div class="navbar-inner">
         <div class="span2 avatar">
-          <img src="/img/avatar.jpeg">
+          <img src="/img/avatar.jpg">
         </div>
         <h1 class="offset4">Thorsten Lorenz</h1>
         <div class="offset4">
