better sidebar link hover and indicating active sidebar linke

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
 
   <section class="row main">
       <nav class="sidebar span4">
-        <ul class="nav">
+        <ul class="nav nav-list">
           {{#if model }}
           {{#if model.sidebar}}
             {{{ exec sidebar model.sidebar }}}
