--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3900,7 +3900,7 @@ input[type="submit"].btn.btn-mini {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  color: rgb(50, 50, 180);
+  background-color: #eeeeee;
 }
 
 .nav > li > a > img {
