--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,6 +14,7 @@
         <div class="offset4">
           <ul class="nav main">
             <li> <a href="/blog">blog</a> </li>
+            <li> <a href="/projects">projects</a> </li>
             <li> <a href="/about">about</a> </li>
           </ul>
         </div>
